changed styles and colors, and fixed some contrast issues and added cool stuff to about section

--- a/sass/blocks/_about.scss
+++ b/sass/blocks/_about.scss
@@ -23,39 +23,34 @@
         margin: 0.25em;
         padding: 0.25em 0.5em;
         background-color: var(--color-light);
+        color: var(--color-background);
       }
     }
 
     &::before {
-      position: absolute;
-      top: 60%;
-      left: 50%;
-      width: 100%;
-      height: 0;
-      padding-bottom: 100%;
-      transform: translate(-50%, -50%);
-      transition: 300ms transform ease-in;
-      background-image: radial-gradient(
-        rgba(255, 0, 0, 0) 20%,
-        #b3f8f1 20%,
-        #b3f8f1 25%,
-        rgba(255, 0, 0, 0) 25%,
-        rgba(255, 0, 0, 0) 30%,
-        #b3f8f1 30%,
-        #b3f8f1 40%,
-        rgba(255, 0, 0, 0) 40%,
-        rgba(255, 0, 0, 0) 45%,
-        #b3f8f1 45%,
-        #b3f8f1 50%,
-        rgba(255, 0, 0, 0) 50%
-      );
-      opacity: 0.8;
       content: "";
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 200px;
+      height: 300px;
+      transform: translateX(-50%);
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%20200%20300'%3E%3Cpolygon fill='black'%20points='100,10%2050,90%20150,90'/%3E%3Cpolygon fill='black'%20points='100,50%2030,190%20170,190'/%3E%3Cpolygon fill='black'%20points='100,90%2020,260%20180,260'/%3E%3Crect%20x='90'%20y='260'%20width='20'%20height='40'%20fill='black'/%3E%3C/svg%3E")!important;
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: bottom center;
+      border: 4px solid rgb(136, 136, 136);
+      border-radius: 50%;
+      opacity: 0.3;
       z-index: -1;
 
       @media (max-width: 35rem) {
-        transform: scale(2) translate(-25%, -25%);
+        width: 140px;
+        height: 210px;
+        transform: translateX(-50%) translateY(5%);
       }
     }
+
+
   }
 }
