--- a/sass/blocks/_guidelines.scss
+++ b/sass/blocks/_guidelines.scss
@@ -15,6 +15,10 @@
     }
   }
 
+  .link-guidelines {
+    color: var(--color-background);
+  }
+
   @supports (background-clip: text) or (-webkit-background-clip: text) {
     p:nth-of-type(2) {
       position: relative;
