--- a/sass/blocks/_styles.scss
+++ b/sass/blocks/_styles.scss
@@ -56,6 +56,10 @@
   h2 {
     color: var(--color-primary);
   }
+
+  .link-allstyles {
+    color: var(--color-background);
+  }
 }
 
 #styles .features,
